# libgusb

./: .travis.yml  AUTHORS  Makefile.am  NEWS  README  README.md  RELEASE  RELEASE.md  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt
.github/workflows/: main.yml
contrib/: generate-version-script.py  gusb.spec.in  libgusb.spec.in  org.freedesktop.GUsb.metainfo.xml
contrib/ci/: Dockerfile-debian  Dockerfile-debian-stretch  Dockerfile-fedora  Dockerfile-fedora-26  build_and_test.sh
docs/: libgusb.toml.in  meson.build
docs/api/: Makefile.am  gusb-docs.sgml  gusb-introduction.xml  meson.build
docs/api/spec/: gusb-faq.xml
gusb/: Makefile.am  gusb-abi-compat.h  gusb-autocleanups.h  gusb-bos-descriptor-private.h  gusb-bos-descriptor.c  gusb-bos-descriptor.h  gusb-cleanup.h  gusb-context-private.h  gusb-context.c  gusb-context.h  gusb-device-event-private.h  gusb-device-event.c  gusb-device-event.h  gusb-device-list.c  gusb-device-list.h  gusb-device-private.h  gusb-device.c  gusb-device.h  gusb-endpoint-private.h  gusb-endpoint.c  gusb-endpoint.h  gusb-interface-private.h  gusb-interface.c  gusb-interface.h  gusb-json-common.c  gusb-json-common.h  gusb-private.h  gusb-self-test.c  gusb-source-private.h  gusb-source.c  gusb-source.h  gusb-umockdev-test.c  gusb-util.c  gusb-util.h  gusb-version.c  gusb-version.h.in  gusb.h  gusb.pc.in  libgusb.ver  libgusb_meson.ver  (+1 more)
libgusb/: Makefile.am  gusb-context-private.h  gusb-context.c  gusb-context.h  gusb-device.c  gusb-device.h  gusb-private.h  gusb-source.c  gusb-source.h  gusb-version.h.in  gusb.h  gusb.pc.in
tools/: Makefile.am  gusb-main.c  meson.build
